# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "automation"
description = "Shared code for writing Rust scripts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

[dependencies]

duct = { workspace = true }
ohno = { workspace = true, features = ["app-err"] }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true
