# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "automation"
description = "Shared code for writing Rust scripts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
include.workspace = true
publish = false

[package.metadata.cargo_check_external_types]
# Internal crate (publish = false; listed in automation::INTERNAL_CRATES). Not a
# public-API surface, so allow all external types — this opts the crate into the
# external-types check permissively rather than denying its internal use of
# ohno/serde/etc.
allowed_external_types = ["*"]

[dependencies]

duct = { workspace = true }
ohno = { workspace = true, features = ["app-err"] }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["std"] }

# >>> anvil-managed: anvil-lints
[lints]
workspace = true
# <<< anvil-managed: anvil-lints
