[package]
name = "autoresolve"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true

[features]
macros = ["autoresolve_macros"]

[dependencies]
autoresolve_macros = { workspace = true, optional = true }
type-map.workspace = true

[dev-dependencies]
autoresolve_macros.workspace = true
trybuild.workspace = true

[lints]
workspace = true
