# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "autoresolve_macros"
description = "Macros for the autoresolve crate."
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
autoresolve_macros_impl.workspace = true

[dev-dependencies]
mutants.workspace = true

[lints]
workspace = true
