# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cachet"
description = "A composable, customizable multi-tier caching library with rich feature support."
version = "0.1.0"
readme = "README.md"
keywords = ["oxidizer", "caching", "concurrency"]
categories = ["caching", "concurrency"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/cachet"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    # Workspace sibling crates
    "anyspawn::spawner::Spawner",
    "bytesbuf::view::BytesView",
    "cachet_memory::*",
    "cachet_service::*",
    "cachet_tier::*",
    "layered::service::Service",
    "tick::clock::Clock",
    # External dependencies
    "opentelemetry::metrics::meter::Meter",
    "opentelemetry::metrics::meter::MeterProvider",
    "serde_core::de::DeserializeOwned",
    "serde_core::ser::Serialize",
]

[features]
default = ["memory"]
logs = ["dep:opentelemetry", "opentelemetry/logs", "dep:tracing"]
test-util = ["cachet_tier/test-util", "tick/test-util"]
memory = ["dep:cachet_memory"]
metrics = ["dep:opentelemetry", "opentelemetry/metrics"]
service = ["dep:cachet_service", "dep:layered"]
serialize = ["dep:serde", "dep:postcard", "dep:bytesbuf"]
telemetry = []

[dependencies]
anyspawn = { workspace = true, features = ["tokio"] }
bytesbuf = { workspace = true, optional = true }
cachet_memory = { workspace = true, optional = true }
cachet_service = { workspace = true, optional = true }
cachet_tier = { workspace = true }
futures = { workspace = true, features = ["async-await", "executor"] }
layered = { workspace = true, optional = true }
ohno = { workspace = true }
opentelemetry = { workspace = true, optional = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
postcard = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thread_aware = { workspace = true }
tick = { workspace = true, features = [] }
tracing = { workspace = true, optional = true }
uniflight = { workspace = true }

[dev-dependencies]
alloc_tracker = { workspace = true }
bytesbuf = { workspace = true }
cachet_memory = { workspace = true }
postcard = { workspace = true }
cachet_tier = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
dynosaur = { workspace = true }
opentelemetry = { workspace = true, features = [
    "metrics",
    "logs",
] }
opentelemetry_sdk = { workspace = true, features = ["logs", "testing"] }
recoverable = { workspace = true }
seatbelt = { workspace = true, features = ["retry", "tower-service"] }
serde = { workspace = true, features = ["derive"] }
testing_aids = { path = "../testing_aids" }
tick = { workspace = true, features = ["test-util", "tokio"] }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[[bench]]
name = "operations"
harness = false
required-features = ["logs", "metrics", "test-util"]

[[bench]]
name = "dynamic"
harness = false
required-features = ["test-util"]

[[bench]]
name = "refresh"
harness = false
required-features = ["test-util"]

[[example]]
name = "simple"
required-features = ["memory"]

[[example]]
name = "wrapped"
required-features = ["memory", "logs", "metrics"]

[[example]]
name = "two_tier"
required-features = ["memory", "logs", "metrics"]

[[example]]
name = "multi_tier"
required-features = ["memory", "logs", "metrics"]

[[example]]
name = "get_or_insert"
required-features = ["memory"]

[[example]]
name = "stampede_protection"
required-features = ["memory"]

[[example]]
name = "refresh"
required-features = ["memory"]

[[example]]
name = "mock_testing"
required-features = ["test-util"]

[[example]]
name = "cache_as_service"
required-features = ["memory", "service"]

[[example]]
name = "service_as_storage"
required-features = ["service"]

[[example]]
name = "multi_tier_service"
required-features = ["memory", "service"]

[[example]]
name = "service_middleware_composition"
required-features = ["memory", "service"]

[[example]]
name = "type_mapping"
required-features = ["memory", "test-util"]

[[example]]
name = "serialization"
required-features = ["memory", "serialize"]

[lints]
workspace = true
