# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cachet_dashboard"
description = "Web-based dashboard for inspecting and load-testing Redis-backed cachet caches."
version = "0.1.0"
publish = false

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
cachet = { workspace = true, features = ["memory", "service", "dynamic-cache", "metrics", "logs"] }
cachet_redis = { workspace = true }
cachet_tier = { workspace = true, features = ["serde"] }
seatbelt = { workspace = true, features = ["retry", "timeout"] }
axum = { workspace = true, features = ["json", "tokio", "query", "http1"] }
tokio-stream = { workspace = true, features = ["sync"] }
redis = { workspace = true, features = ["aio", "connection-manager", "tokio-comp"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
fastrand = { workspace = true }
parking_lot = { workspace = true }
layered = { workspace = true }
recoverable = { workspace = true }
tick = { workspace = true, features = ["tokio"] }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "testing"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["fmt", "std"] }

[lints]
workspace = true
