# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cachet_memory"
description = "A composable, customizable multi-tier caching library with rich feature support."
version = "0.1.0"
readme = "README.md"
keywords = ["oxidizer", "caching", "concurrency"]
categories = ["caching", "concurrency"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/cachet_memory"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = ["cachet_tier::tier::CacheTier", "thread_aware::core::ThreadAware"]

[dependencies]
cachet_tier = { path = "../cachet_tier" }
moka = { version = "0.12", features = ["future"] }
thread_aware = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true, features = ["executor"] }
gungraun = { workspace = true }
mutants = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "overhead_iai"
harness = false

[lints]
workspace = true
