# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cachet_redis"
description = "Redis-backed cache tier for the cachet caching framework."
version = "0.1.0"
readme = "README.md"
keywords = ["oxidizer", "caching", "redis"]
categories = ["caching"]
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/cachet_redis"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
cachet_service = { path = "../cachet_service" }
cachet_tier = { path = "../cachet_tier", features = ["serde"] }
layered = { workspace = true }
redis = { workspace = true, features = ["aio", "connection-manager", "tokio-comp"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
thread_aware = { workspace = true, features = ["derive"] }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
mutants = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
